# pflichtenheft

./: .gitignore  CMakeLists.txt  Doxyfile  Sudoku.exe.htm  Sudoku.sln  Sudoku.vcxproj  Sudoku.vcxproj.filters  app  build.bat  build.sh  compile.bat  db.dia  game.h  main.c  shared.h  sudoku.db  sudoku.db~Stashed changes  view.h
Debug/: Sudoku.ilk  sudoku.db  vc141.idb
Debug/Sudoku.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sudoku.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
db/: sudoku.db
doc/: Doxyfile
doc/Struktogramme/: Main-Funktion.nsd  handleInput.nsd  renderGame.nsd
doc/html/: T_8h.html  T_8h_source.html  annotated.html  classExampleClass.html  classes.html  connection_8h.html  connection_8h_source.html  dir_703408a5d7d022a2a7a848c3cf5e093e.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_b6bd27c7212b6aca044969b53df341d6.html  dir_c55509eeb63bcbc47aa921b127ea82fb.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8h.html  game_8h_source.html  getch_8h.html  getch_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__somewhere.html  index.html  inputHandler_8h.html  inputHandler_8h_source.html  menudata.js  modules.html  score__service_8h.html  score__service_8h_source.html  shared_8h.html  shared_8h_source.html  structScore.html  structsScore.html  user__service_8h.html  (+3 more)
doc/latex/: annotated.tex  (+21 more)
headers/: game.h  getch.h  shared.h  view.h
libs/: sqlite3.h
src/: game.c  view.c
(+75 files in other folders)
